Fixing pre and code blocks overflow

--- a/src/assets/css/markdown.css
+++ b/src/assets/css/markdown.css
@@ -718,6 +718,7 @@
     display: inline;
     line-height: inherit;
     margin: 0;
+    max-width: auto;
     overflow: visible;
     padding: 0;
     word-wrap: normal;
